# AthenaPilot

./: CMakeLists.txt  README.md  USAGE.md  USER_GUIDE.md  run_gcs.sh
firmware/: CMakeLists.txt
firmware/include/: mixer.h  pid.h  udp_socket.h
firmware/src/: main.cpp  mixer.cpp  pid.cpp  udp_socket.cpp
ground_control/: __init__.py  main.py  requirements.txt
ground_control/comms/: __init__.py  udp_link.py
ground_control/gui/: __init__.py  hud_widget.py  main_window.py
matlab/: AthenaSim_2.slx  Athena_Arcade.slx  Athena_HIL_Test.slx  Athena_HIL_Test.slxc  Athena_HIL_Test_2.slx  Athena_Plant.slx  test_connection.m
matlab/slprj/sim/varcache/Athena_HIL_Test/: checksumOfCache.mat  varInfo.mat
matlab/slprj/sim/varcache/Athena_HIL_Test/tmwinternal/: simulink_cache.xml
src/: main.cpp
src/core/: system_utils.h
src/drivers/: udp_driver.cpp  udp_driver.h
src/modules/: estimator.cpp  estimator.h  hil_interface.cpp  hil_interface.h  mixer.cpp  mixer.h  pid.cpp  pid.h
tools/: gui_snapshot.py  sim_simulink.py
tools/sim/: sitl_simulator.py
